5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4081/executions/1601_1802.log
== TEST (2019-04-01 14:14:37) 
-- CODE:
pontos(int(input("pontos de vida:")))
D1=int(input("valoressorteados1:"))
D2=int(input("valoressorteados2:"))

dano= math*sqrt(5*D1 + pi D2/3)
print(dano)
-- ERROR:
File "XXXX", line 5
    dano= math*sqrt(5*D1 + pi D2/3)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:15:03) 
-- CODE:
pontos(int(input("pontos de vida:")))
D1=int(input("valoressorteados1:"))
D2=int(input("valoressorteados2:"))


from math impor*
dano= math*sqrt(5*D1 + pi D2/3)
print(dano)
-- ERROR:
File "XXXX", line 6
    from math impor*
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:19:08) 
-- CODE:
pontos(int(input("pontos de vida:")))
D1=int(input("valoressorteados1:"))
D2=int(input("valoressorteados2:"))
vida= D1+D2

import math
dano= math.sqrt(5*D1 + pi D2/3)
print(dano)
-- ERROR:
File "XXXX", line 7
    dano= math.sqrt(5*D1 + pi D2/3)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:21:27) 
-- CODE:
pontos(int(input("pontos de vida:")))
D1=int(input("valoressorteados1:"))
D2=int(input("valoressorteados2:"))
vida= D1+D2
import math
dano= math.sqrt(5*D1 + pi*D2/3)
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pontos(int(input()))
NameError: name 'pontos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:21:54) 
-- CODE:
pontosdevida(int(input("pontos de vida:")))
D1=int(input("valoressorteados1:"))
D2=int(input("valoressorteados2:"))
vida= D1+D2
import math
dano= math.sqrt(5*D1 + pi*D2/3)
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pontosdevida(int(input()))
NameError: name 'pontosdevida' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:21:57) 
-- CODE:
pontosdevida(int(input("pontos de vida:")))
D1=int(input("valoressorteados1:"))
D2=int(input("valoressorteados2:"))
vida= D1+D2
import math
dano= math.sqrt(5*D1 + pi*D2/3)
print(dano)
-- EXECUTION TIME:
0.19968
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/1802/main.py", line 1, in <module>
    pontosdevida(int(input()))
NameError: name 'pontosdevida' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:22:37) 
-- CODE:
import math
pontosdevida(int(input("pontos de vida:")))
D1=int(input("valoressorteados1:"))
D2=int(input("valoressorteados2:"))
vida= D1+D2
dano= math.sqrt(5*D1 + pi*D2/3)
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pontosdevida(int(input()))
NameError: name 'pontosdevida' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:23:09) 
-- CODE:
import math
pontosdevida=(int(input("pontos de vida:")))
D1=int(input("valoressorteados1:"))
D2=int(input("valoressorteados2:"))
vida= D1+D2
dano= math.sqrt(5*D1 + pi*D2/3)
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dano= math.sqrt(5*D1 + pi*D2/3)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:23:58) 
-- CODE:
import math
pontosdevida=(int(input("pontos de vida:")))
D1=int(input("valoressorteados1:"))
D2=int(input("valoressorteados2:"))
vida= D1+D2
dano = math.sqrt(5*D1 + pi*D2/3)
print(dano)
-- EXECUTION TIME:
0.133503
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/1802/main.py", line 6, in <module>
    dano = math.sqrt(5*D1 + pi*D2/3)
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:24:40) 
-- CODE:
import math
pontosdevida=(int(input("pontos de vida:")))
D1=int(input("valoressorteados1:"))
D2=int(input("valoressorteados2:"))
vida= D1+D2
dano = math.sqrt(5*D1 + pi**D2/3)
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dano = math.sqrt(5*D1 + pi**D2/3)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:26:43) 
-- CODE:
import math
pontosdevida=(int(input("pontos de vida:")))
D1=int(input("valoressorteados1:"))
D2=int(input("valoressorteados2:"))
vida= D1+D2
dano = math.sqrt(5*D1 + (pi)**D2/3)
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dano = math.sqrt(5*D1 + (pi)**D2/3)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:27:25) 
-- CODE:
import math
pontosdevida=(int(input("pontos de vida:")))
D1=int(input("valoressorteados1:"))
D2=int(input("valoressorteados2:"))
vida= D1+D2
dano = math.sqrt((5*D1 + (pi)**D2/3)
print(dano)
-- EXECUTION TIME:
0.198444
-- ERROR:
  File "/home/codebench/codes/1601/1802/main.py", line 7
    print(dano)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:27:35) 
-- CODE:
import math
pontosdevida=(int(input("pontos de vida:")))
D1=int(input("valoressorteados1:"))
D2=int(input("valoressorteados2:"))
vida= D1+D2
dano = math.sqrt((5*D1) + (pi)**D2/3)
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dano = math.sqrt((5*D1) + (pi)**D2/3)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:33:47) 
-- CODE:
import math
pontosdevida=(int(input("pontos de vida:")))
D1=int(input("valoressorteados1:"))
D2=int(input("valoressorteados2:"))
vida= D1+D2
dano = math.sqrt(5*D1) + (pi)**D2/3)
print(dano)
-- ERROR:
File "XXXX", line 6
    dano = math.sqrt(5*D1) + (pi)**D2/3)
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:34:11) 
-- CODE:
import math
pontosdevida=(int(input("pontos de vida:")))
D1=int(input("valoressorteados1:"))
D2=int(input("valoressorteados2:"))
vida= D1+D2
dano = math.sqrt(5*D1 + (pi)**D2/3)
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dano = math.sqrt(5*D1 + (pi)**D2/3)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:35:28) 
-- CODE:
import math
pontosdevida=(int(input("pontos de vida:")))
D1=int(input("valoressorteados1:"))
D2=int(input("valoressorteados2:"))
vida= D1+D2
dano = math*sqrt(5*D1 + (pi)**D2/3)
print(dano)
-- EXECUTION TIME:
0.220791
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/1802/main.py", line 6, in <module>
    dano = math*sqrt(5*D1 + (pi)**D2/3)
NameError: name 'sqrt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:36:03) 
-- CODE:
import math
pontosdevida=(int(input("pontos de vida:")))
d1=int(input("valoressorteados1:"))
d2=int(input("valoressorteados2:"))
vida= D1+D2
dano = math*sqrt(5*d1 + (pi)**d2/3)
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    vida= D1+D2
NameError: name 'D1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:36:22) 
-- CODE:
import math
pontosdevida=(int(input("pontos de vida:")))
d1=int(input("valoressorteados1:"))
d2=int(input("valoressorteados2:"))
vida= d1+d2
dano = math*sqrt(5*d1 + (pi)**d2/3)
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dano = math*sqrt(5*d1 + (pi)**d2/3)
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:37:52) 
-- CODE:
import math
pontosdevida=(int(input("pontos de vida:")))
d1=int(input("valoressorteados1:"))
d2=int(input("valoressorteados2:"))
vida= d1+d2
dano = math.sqrt(5*d1 + (pi)**d2/3)
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dano = math.sqrt(5*d1 + (pi)**d2/3)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:38:14) 
-- CODE:
import math
pontosdevida=(int(input("pontos de vida:")))
d1=int(input("valoressorteados1:"))
d2=int(input("valoressorteados2:"))
vida= d1+d2
dano = math.sqrt(5*d1 + (pi)**d2/3)
print(dano)
-- EXECUTION TIME:
0.153248
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/1802/main.py", line 6, in <module>
    dano = math.sqrt(5*d1 + (pi)**d2/3)
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:38:59) 
-- CODE:
from math import*
pontosdevida=(int(input("pontos de vida:")))
d1=int(input("valoressorteados1:"))
d2=int(input("valoressorteados2:"))
vida= d1+d2
dano = math.sqrt(5*d1 + (pi)**d2/3)
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dano = math.sqrt(5*d1 + (pi)**d2/3)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:41:44) 
-- CODE:
from math import*
pontosdevida=(int(input("pontos de vida:")))
d1=int(input("valoressorteados1:"))
d2=int(input("valoressorteados2:"))
vida= d1+d2+pontosdevida
dano = math.sqrt(5*d1 + (pi)**d2/3)
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dano = math.sqrt(5*d1 + (pi)**d2/3)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:43:18) 
-- CODE:
from math import*
pontosdevida=(int(input("pontos de vida:")))
d1=int(input("valoressorteados1:"))
d2=int(input("valoressorteados2:"))
vida= d1+d2+pontosdevida
dano = math.sqrt(5*d1 + (pi)**d2/3)
print(dano)
-- EXECUTION TIME:
0.217448
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/1802/main.py", line 6, in <module>
    dano = math.sqrt(5*d1 + (pi)**d2/3)
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:44:02) 
-- CODE:
from math import*
pontosdevida=(int(input("pontos de vida:")))
D1=int(input("valoressorteados1:"))
D2=int(input("valoressorteados2:"))
vida= D1+D2+pontosdevida
dano = math.sqrt(5*D1 + (pi)**D2/3)
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dano = math.sqrt(5*D1 + (pi)**D2/3)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:45:15) 
-- CODE:
from math import*
pontosdevida=(int(input("pontos de vida:")))
d1=int(input("valoressorteados1:"))
d2=int(input("valoressorteados2:"))
vida= D1+D2
dano = math.sqrt(5*d1 + (pi)**d2/3)
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    vida= D1+D2
NameError: name 'D1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:45:48) 
-- CODE:
from math import*
pontosdevida=(int(input("pontos de vida:")))
d1=int(input("valoressorteados1:"))
d2=int(input("valoressorteados2:"))
dano = math.sqrt(5*d1 + (pi)**d2/3)
print(dano)
-- EXECUTION TIME:
0.20132
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/1802/main.py", line 5, in <module>
    dano = math.sqrt(5*d1 + (pi)**d2/3)
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:45:51) 
-- CODE:
from math import*
pontosdevida=(int(input("pontos de vida:")))
d1=int(input("valoressorteados1:"))
d2=int(input("valoressorteados2:"))
dano = math.sqrt(5*d1 + (pi)**d2/3)
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dano = math.sqrt(5*d1 + (pi)**d2/3)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:48:40) 
-- CODE:
from math import*
pontosdevida=(int(input("pontos de vida:")))
D1=int(input("valoressorteados1:"))
D2=int(input("valoressorteados2:"))
soma= D1+D2
dano = math.sqrt(5*D1 + (pi)**D2/3)
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dano = math.sqrt(5*D1 + (pi)**D2/3)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:50:12) 
-- CODE:
from math import*
A= (int(input("pontos de vida:")))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2+A
dano = math.sqrt(5*D1 + (pi)**D2/3)
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dano = math.sqrt(5*D1 + (pi)**D2/3)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:50:38) 
-- CODE:
from math import*
a= (int(input("pontos de vida:")))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2+a
dano = math.sqrt(5*D1 + (pi)**D2/3)
print(dano)
-- EXECUTION TIME:
0.136601
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/1802/main.py", line 6, in <module>
    dano = math.sqrt(5*D1 + (pi)**D2/3)
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:52:08) 
-- CODE:

a= (int(input("pontos de vida:")))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2+a
from math import*
dano = math.sqrt(5*D1 + (pi)**D2/3)
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    dano = math.sqrt(5*D1 + (pi)**D2/3)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:52:59) 
-- CODE:

a= (int(input("pontos de vida:")))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2/a
from math import*
dano = math.sqrt(5*D1 + (pi)**D2/3)
print(dano)
-- EXECUTION TIME:
0.203024
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/1802/main.py", line 7, in <module>
    dano = math.sqrt(5*D1 + (pi)**D2/3)
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:53:02) 
-- CODE:

a= (int(input("pontos de vida:")))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2/a
from math import*
dano = math.sqrt(5*D1 + (pi)**D2/3)
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    dano = math.sqrt(5*D1 + (pi)**D2/3)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:54:16) 
-- CODE:

a= (int(input("pontos de vida:")))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
from math import*
dano = math.sqrt(5*D1 + pi**D2/3)
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    dano = math.sqrt(5*D1 + pi**D2/3)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:55:29) 
-- CODE:

a= (int(input("pontos de vida:")))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
from math import*
dano = math.sqrt(5*D1 + (pi)**D2/3)
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    dano = math.sqrt(5*D1 + (pi)**D2/3)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:56:20) 
-- CODE:

a= (int(input("pontos de vida:")))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
from math import*
dano = math.sqrt(5*D1 + (pi_)**D2/3)
print(dano)
-- EXECUTION TIME:
0.202705
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/1802/main.py", line 7, in <module>
    dano = math.sqrt(5*D1 + (pi_)**D2/3)
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:00:59) 
-- CODE:

a= (int(input("pontos de vida:")))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
from math import*
dano=math.sqrt(5*D1+pi**D2/3)
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    dano=math.sqrt(5*D1+pi**D2/3)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:06:59) 
-- CODE:
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
from math import*
dano=math.sqrt(5*D1+pi**D2/3)
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dano=math.sqrt(5*D1+pi**D2/3)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:07:37) 
-- CODE:
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
from math import*
dano = math.sqrt(5.D1+pi**D2/3)
print(dano)
-- EXECUTION TIME:
0.172714
-- ERROR:
  File "/home/codebench/codes/1601/1802/main.py", line 6
    dano = math.sqrt(5.D1+pi**D2/3)
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:09:16) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = math*sqrt(5*D1+pi**D2/3)
print(dano)
-- EXECUTION TIME:
0.164921
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/1802/main.py", line 6, in <module>
    dano = math*sqrt(5*D1+pi**D2/3)
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:10:50) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = math*sqtr(5*D1+pi**D2/3)
print(dano)
-- EXECUTION TIME:
0.166086
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/1802/main.py", line 6, in <module>
    dano = math*sqtr(5*D1+pi**D2/3)
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:11:59) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
dano = math*sqrt(5*D1+pi**D2/3)
print(dano)
-- EXECUTION TIME:
0.145946
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/1802/main.py", line 5, in <module>
    dano = math*sqrt(5*D1+pi**D2/3)
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:12:01) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
dano = math*sqrt(5*D1+pi**D2/3)
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dano = math*sqrt(5*D1+pi**D2/3)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:15:43) 
-- CODE:
from math import*
a= int(f(input("pontos de vida:"))
D1= int(f(input("valoressorteados1:"))
D2= int(f(input("valoressorteados2:"))
soma= D1+D2
dano = math*sqrt(5*D1+pi**D2/3)
print(dano)
-- ERROR:
File "XXXX", line 3
    D1= int(f(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:24:34) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = math*sqrt(0.5*D1+pi**D2/3)
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dano = math*sqrt(0.5*D1+pi**D2/3)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:25:13) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = int(0.5*D1+pi**D2/3)
print(dano)
-- EXECUTION TIME:
0.287067
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
320
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
323
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:25:49) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = int(5*D1+pi**D2/3)
print(dano)
-- OUTPUT:
325
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:26:04) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = int(5*D1+pi**D2/3)
print(dano)
-- EXECUTION TIME:
0.199895
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
325
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
350
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:26:35) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = int(5*D1+pi**D2/3)
print(dano)
-- OUTPUT:
325
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:35:56) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = math.sqrt(5*D1+pi**D2/3)
print(int(dano)
-- ERROR:
File "XXXX", line 8
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:36:27) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = int(5*D1+pi**D2/3)
print(int(dano)
-- ERROR:
File "XXXX", line 8
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:36:39) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = int(5*D1+pi**D2/3)
print(int(dano))
-- OUTPUT:
325
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:37:40) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = int(5*D1+pi**D2/3)
print(int(dano))
-- EXECUTION TIME:
0.151025
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
325
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
350
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:38:08) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = int(0.5*D1)+(pi**D2/3)
print(int(dano))
-- OUTPUT:
320
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:39:47) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = int(sqrt(5*D1)+(pi**D2/3)
print(int(dano))
-- ERROR:
File "XXXX", line 7
    print(int(dano))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:42:07) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = int(sqrt(5*D1)+(pi**D2/3))
print(int(dano))
-- OUTPUT:
322
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:42:35) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = int(sqrt(10*D1)+(pi**D2/3))
print(int(dano))
-- OUTPUT:
323
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:42:53) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = int(sqrt(5*D1)+(pi**D2/3))
print(int(dano))
-- EXECUTION TIME:
0.145302
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
322
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
325
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:43:47) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = int(sqrt(5*D1*5)+(pi**D2//3))
print(int(dano))
-- OUTPUT:
325
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:44:09) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = int(sqrt(0.5*D1)+(pi**D2/3))
print(int(dano))
-- OUTPUT:
321
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:44:33) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = int(math.sqrt(0.5*D1)+(pi**D2/3))
print(int(dano))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dano = int(math.sqrt(0.5*D1)+(pi**D2/3))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:46:02) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = int(math.sqrt(5*D1)+(pi**D2/3))
print(int(dano))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dano = int(math.sqrt(5*D1)+(pi**D2/3))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:46:15) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = int(math*sqrt(5*D1)+(pi**D2/3))
print(int(dano))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dano = int(math*sqrt(5*D1)+(pi**D2/3))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:46:45) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = int(sqrt(5*D1)+(pi**D2//3))
print(int(dano))
-- OUTPUT:
322
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:47:07) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = int(5*D1)+(pi**D2//3)
print(int(dano))
-- OUTPUT:
325
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:48:47) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = int.sqrt(5*D1)+(pi**D2//3)
print(int(dano))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dano = int.sqrt(5*D1)+(pi**D2//3)
AttributeError: type object 'int' has no attribute 'sqrt'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:49:30) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = int(math.sqrt(0.5*D1*5)+(pi**D2//3)
print(int(dano))
-- ERROR:
File "XXXX", line 7
    print(int(dano))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:49:44) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = int(math.sqrt(0.5*D1*5)+(pi**D2//3)
print(dano)
-- ERROR:
File "XXXX", line 7
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:50:22) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = int(math.sqrt(0.5*D1*5)+(pi**D2/3)
print(dano)
-- ERROR:
File "XXXX", line 7
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:50:44) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = int(math.sqrt(0.5*D1*5)+(pi**D2/3)
print("dano")
-- ERROR:
File "XXXX", line 7
    print("dano")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:52:23) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = int(sqrt(5**0.5*D1*5)+(pi**D2/3)
print(dano)
-- ERROR:
File "XXXX", line 7
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:52:35) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = int(sqrt(5**0.5*D1*5)+(pi**D2/3)
print(int(dano)
-- ERROR:
File "XXXX", line 7
    print(int(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:52:44) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = int(sqrt(5**0.5*D1*5)+(pi**D2/3)
print(int(dano))
-- ERROR:
File "XXXX", line 7
    print(int(dano))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:53:25) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = int(sqrt(5**0.5*D1)+(pi**D2//3)
print(int(dano))
-- ERROR:
File "XXXX", line 7
    print(int(dano))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:53:39) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = int(sqrt(5**0.5*D1)+(pi**D2/3)
print(int(dano))
-- ERROR:
File "XXXX", line 7
    print(int(dano))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:54:26) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = int(sqrt(5**0.5*D1+pi**D2/3)
print(int(dano))
-- ERROR:
File "XXXX", line 7
    print(int(dano))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:54:38) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = int(5**0.5*D1+pi**D2/3)
print(int(dano))
-- OUTPUT:
322
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:55:17) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = int(sqrt(5**0.5*D1+pi**D2/3)
print(int(dano))
-- ERROR:
File "XXXX", line 7
    print(int(dano))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:56:09) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = int(sqrt(5**0.5*D1+pi**D2/3)
print(int("dano"))
-- ERROR:
File "XXXX", line 7
    print(int("dano"))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:57:00) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = int(sqrt(5**0.5*D1+pi**D2/3)
int(dano)
print(dano)
-- ERROR:
File "XXXX", line 7
    int(dano)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:57:09) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = int(sqrt(5**0.5*D1+pi**D2/3)
print(dano)
-- ERROR:
File "XXXX", line 7
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:57:21) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = int(math.sqrt(5**0.5*D1+pi**D2/3)
print(dano)
-- ERROR:
File "XXXX", line 7
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:57:30) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = int(math*sqrt(5**0.5*D1+pi**D2/3)
print(dano)
-- ERROR:
File "XXXX", line 7
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:57:36) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = int(math*sqrt(5**0.5*D1+pi**D2/3)
print(dano)
-- EXECUTION TIME:
0.175819
-- ERROR:
  File "/home/codebench/codes/1601/1802/main.py", line 7
    print(dano)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:58:44) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = int(math*sqrt(0.5*D1+pi**D2/3)
print(dano)
-- ERROR:
File "XXXX", line 7
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:59:01) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano = int(sqrt(0.5*D1+pi**D2/3)
print(dano)
-- ERROR:
File "XXXX", line 7
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:59:20) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano= int(sqrt(0.5*D1+pi**D2/3)
print(int(dano)
-- ERROR:
File "XXXX", line 7
    print(int(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 17:56:07) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano= math.sqrt(sqrt(0.5*D1+pi**D2/3)
print(int(dano)
-- ERROR:
File "XXXX", line 7
    print(int(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 17:56:12) 
-- CODE:
from math import*
a= int(input("pontos de vida:"))
D1= int(input("valoressorteados1:"))
D2= int(input("valoressorteados2:"))
soma= D1+D2
dano= math.sqrt(sqrt(0.5*D1+pi**D2/3)
print(dano)
-- ERROR:
File "XXXX", line 7
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
